--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="statBox">
                   <h2>Order frequency</h2>
-                  <p>1234</p> <!-- Placeholder retained -->
+                  <p>xxxx</p> <!-- Placeholder retained -->
                 </div>
               </div>
             </div>
