Add toggle functionality to barChart

--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -143,6 +143,9 @@
               <button class="btn" id="worstButton" style="z-index: 99;" onclick="worstButton();">UNSTABLE</button>
               <button class="btn" id="customButton" style="z-index: 99;" onclick="customButton();">CUSTOM</button>
             </div>
+            <div class="btnbox" style="width: 80px; ">
+              <button class="btn" id="customButton" style="z-index: 99;" onclick="toggleBarChart();">TOGGLE</button>
+            </div>
             <h1 class="centered" data-tooltip="The right chart shows the revenue with your chosen condition. You can choose between the buttons 
                 'STABLE','UNSTABLE','CUSTOM'. You can add stores by clicking those in the bar chart to the right."
               id="revenueTitle" style="margin-top: 4px;">Revenue</h1>
@@ -275,18 +278,6 @@
 
       pizzaPopularity();
       revenueForecast();
-    </script>
-    <script>
-      // Call functions to fetch and display stats
-      const date = '2022-12-01'; // Example date, adjust as necessary
-      fetchTotalOrders(date);
-      fetchTotalRevenue(date);
-      fetchTotalCustomers();
-      fetchTotalPizzasSold(date);
-      fetchAverageOrderCustomer(date);
-      fetchAverageOrderValueCustomer(date);
-      fetchAveragePizzasPerOrderCustomer(date);
-      fetchOrderFrequencyCustomer(date);
     </script>
 </body>
 
