--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -265,7 +265,7 @@
           })
           .catch((error) => console.error("Error fetching data:", error));
       }*/
-
+      console.log(localStorage.getItem("store"));
       storeLocationMap();
       let markersLayer = L.layerGroup().addTo(map);
 
