--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -25,8 +25,11 @@
 </head>
 
 <body>
-  <button class="openbtn" onclick="toggleSidebar()">☰</button>
-  <a id="companyname" href="/">@ PizzaHub</a>
+  <button class="openbtn" onclick="toggleSidebar()"><i class="fa-solid fa-bars"></i></button>
+  <a id="companyname" href="/">
+    <i class="fa-solid fa-house"></i>
+    PizzaHub
+  </a>
   <div id="user">
     <h1>Sebastian Bremm</h1>
     <p>Programming Lab Professor</p>
@@ -67,7 +70,7 @@
               <div class="section-items">
                 <div class="statBox">
                   <div class="iconBox">
-                    <i class="fas fa-shopping-bag"></i>
+                    <i class="fas fa-chart-line"></i>
                   </div>
                   <h2>Orders<h2>
                       <p id="totalOrders">xxxx</p>
@@ -88,7 +91,7 @@
                 </div>
                 <div class="statBox">
                   <div class="iconBox">
-                    <i class="fas fa-chart-line"></i>
+                    <i class="fa-solid fa-pizza-slice"></i>
                   </div>
                   <h2>Pizzas sold</h2>
                   <p id="totalPizzasSold">xxxx</p>
@@ -102,28 +105,28 @@
                 <div class="statBox">
                   <div id="stat-item"></div>
                   <div class="iconBox">
-                    <i class="fas fa-chart-line"></i>
+                    <i class="fas fa-shopping-bag"></i>
                   </div>
                   <h2>Orders</h2>
                   <p id="avgOrdersPerCustomer">xxxx</p>
                 </div>
                 <div class="statBox">
                   <div class="iconBox">
-                    <i class="fas fa-chart-line"></i>
+                    <i class="fa-solid fa-hand-holding-dollar"></i>
                   </div>
                   <h2>Order Value</h2>
                   <p id="avgOrderValuePerCustomer">xxxx</p>
                 </div>
                 <div class="statBox">
                   <div class="iconBox">
-                    <i class="fas fa-chart-line"></i>
+                    <i class="fa-solid fa-list-ol"></i>
                   </div>
                   <h2>Pizzas per Order</h2>
                   <p id="avgPizzasPerOrder">xxxx</p>
                 </div>
                 <div class="statBox">
                   <div class="iconBox">
-                    <i class="fas fa-chart-line"></i>
+                    <i class="fa-solid fa-rotate"></i>
                   </div>
                   <h2>Order frequency</h2>
                   <p id="orderFrequency">xxxx</p>
