--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -181,13 +181,11 @@
             <div class="section-items">
               <div class="subsection" style="margin-top: 0px; margin-left: 0px; margin-right: 0px;">
                 <div class="section-items" style="justify-content: space-between;">
-                  <div class="btnbox" style="width: 120px;">
+                  <div class="btnbox" style="width: 90px;">
                     <button class="btn" id="" onclick="changeDow(-1);" style="z-index: 99;">
-                      <i class="fa-solid fa-chevron-left"></i>
-                    </button>
+                      <i class="fa-solid fa-caret-left"></i> </button>
                     <button class="btn" id="" onclick="changeDow(1);" style="z-index: 99;">
-                      <i class="fa-solid fa-chevron-right"></i>
-                    </button>
+                      <i class="fa-solid fa-caret-right"></i> </button>
                   </div>
                   <div class="btnbox" style="width: 60px;">
                     <button class="infobox" id="dowInfo">TODAY</button>
