--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -176,7 +176,7 @@
         <div class="section-items" style="width: 50%;">
           <div class="subsection">
             <h2>Revenue Forecast</h2>
-            <div id="revenueForecast" class="diagram" style="height: 300px;"></div>
+            <div id="revenueForecast" class="diagram" style="width: 100%; height: 300px;"></div>
           </div>
           <div class="subsection">
             <!--<h2 data-tooltip="This is the a Map showing all Stores" id="mapTitel">Store locations</h2>-->
