--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -142,7 +142,7 @@
         <div class="section">
           <div class="section-items">
             <div class="btnbox">
-              <button class="btn" id="bestButton" style="z-index: 99;" onclick="bestbestButton();">STABLE</button>
+              <button class="btn" id="bestButton" style="z-index: 99;" onclick="bestButton();">STABLE</button>
               <button class="btn" id="worstButton" style="z-index: 99;" onclick="worstButton();">UNSTABLE</button>
               <button class="btn" id="customButton" style="z-index: 99;" onclick="customButton();">CUSTOM</button>
             </div>
