--- a/src/frontend/styles/main.css
+++ b/src/frontend/styles/main.css
@@ -394,14 +394,13 @@ button.active {
 
 .tooltip {
   position: absolute;
-  background-color: #333;
-  color: #fff;
-  padding: 5px 10px;
-  border-radius: 5px;
-  font-size: 14px;
-  visibility: hidden;
+  background-color: #505050;
+  border: 1px solid #d3d3d3;
+  padding: 5px;
+  z-index: 1000;
+  visibility: hidden; /* initially hidden */
   opacity: 0;
-  transition: visibility 0s, opacity 0.2s;
+  transition: opacity 0.5s;
 }
 
 .tooltip.show {
