chore: Update tooltip styling for improved visibility and consistency

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -68,7 +68,7 @@
                   <div class="iconBox">
                     <i class="fas fa-chart-line"></i>
                   </div>
-                  <h2 data-tooltip="This is the first placeholder section">Orders<h2>
+                  <h2>Orders<h2>
                       <p id="sSales">xxxx</p>
                 </div>
                 <div class="statBox">
@@ -160,13 +160,13 @@
               </div>
               <div class="section-items">
                 <div class="subsection">
-                  <h2>Heatmap</h2>
+                  <h2 data-tooltip="Text needed">Heatmap</h2>
                   <div id="Heatmap" class="diagram"></div>
                 </div>
               </div>
               <div class="section-items">
                 <div class="subsection">
-                  <h2 class="pizzaPopularityH" data-tooltip="This is the first placeholder section">Pizza Popularity
+                  <h2 class="pizzaPopularityH" data-tooltip="Text needed">Pizza Popularity
                   </h2>
                   <div id="pizzaPopularity" class="diagram"></div>
                 </div>
