Refactor pizzaPopularity function for improved data aggregation and processing

--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -170,7 +170,7 @@
       <!--Bottom section-->
       <div class="section-items">
         <div class="subsection">
-          <h2 class="pizzaPopularityH" data-tooltip="This is the first placeholder section">Pizza Popularity</h2>
+          <h2 class="pizzaPopularityH" data-tooltip="Shows the Popularity of all Pizzas overtime">Pizza Popularity</h2>
           <div id="pizzaPopularity" class="diagram"></div>
         </div>
         <div class="pizzaRankingChart"></div>
